--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mapfly</title>
     </head>
-    <body class="inter">
+    <body class="font-roboto">
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
